# Kaggle-5-Day-AI-Agents-with-Google

./: README.md
customer-support-agent/: README.md  agents-cli-manifest.yaml  test_run.py
customer-support-agent/app/: agent.py
day-3-kaggle/: auth.py  product_model.py
day-3-kaggle/.agent/skills/database-schema-validator/: SKILL.md
day-3-kaggle/.agent/skills/database-schema-validator/scripts/: validate_schema.py
day-3-kaggle/.agent/skills/json-to-pydantic/: SKILL.md
day-3-kaggle/.agent/skills/json-to-pydantic/examples/: output_model.py
day-3-kaggle/.agent/skills/license-header-adder/: SKILL.md
day-4-kaggle/: .gitignore  Makefile  README.md  agents-cli-manifest.yaml  pyproject.toml  test_trigger.py
day-4-kaggle/expense_agent/: agent.py  fast_api_app.py
day-4-kaggle/tests/eval/: eval_config.yaml  generate_traces.py  grade_traces.py
day-4-kaggle/tests/eval/datasets/: basic-dataset.json
shailly-event-talks-app/: .gitignore  README.md  app.py  run.ps1
shailly-event-talks-app/static/: script.js  style.css
shailly-event-talks-app/templates/: index.html
weather-kg/: README.md  agents-cli-manifest.yaml
weather-kg/app/: agent.py
