[project]
name = "expense-workflow"
version = "0.1.0"
description = "Expense approval workflow with security controls"
dependencies = [
    "google-adk>=2.0.0,<3.0.0",
    "google-agents-cli>=0.5.0",
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
]
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["expense_agent"]
